HelloUltraviolet/Fixtures/RejectedSource/Modules/ReservedModuleKeyword/Expected.uv
//! Expected diagnostic metadata for the ReservedModuleKeyword rejected-source specimen.

expectedDiagnostic("E-MOD-1105", "WF-Module-Path-Reserved")
expectedDiagnostic("E-MOD-1105", "diagnostics.ModuleAggregation")
